# gamer-cat

./: .gitignore  DOCUMENTATION.md  ERROR_LOGS.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  README.md  SESSION_LOG_2026-03-01.md  SESSION_LOG_2026-03-02.md  WEBSITE_PLAN.md  index.html  pyproject.toml  requirements.txt  startup.sh
docs/: app.js  index.html  style.css
notes/: DIAGNOSTICS_AUDIO.md  GEMINI.md  IMPLEMENTATION_PLAN.md  idea.md  technical_plan.md
src/: gamer_cat.py  mcp_server.py  screen_capture.py  vision_engine.py  voice_engine.py
tests/: test_screen_capture.py  test_voice.py
